# Swagger/tfa/api.py
@@ -1,0 +1,14 @@
+# -*- coding: utf-8 -*-
+"""
+Created on Tue Jun 29 16:27:06 2021
+
+@author: Brian Hu
+"""
+
+def get_tfa_fft():
+    return None
+def tfa_fft():
+    return None
+def delete_tfa_fft():
+    return None
+def 
